tests/generics/04-mismatch.rs
use lazy_nd::lazy_nd;
#[lazy_nd(dim = D)]
struct Test<const T: usize> {}
fn main() {}
